--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.3.0",
   "private": true,
   "scripts": {
-    "start": "node app"
+    "start": "node app",
+    "lintcheck": "scripts/lintcheck"
   },
   "dependencies": {
     "express": "2.5.x",
@@ -38,6 +39,7 @@
     "mongoose-fakery": "*",
     "grunt-contrib-cssmin": "~0.6.1",
     "supertest": "*",
-    "sinon": "*"
+    "sinon": "*",
+    "nodelint": "*"
   }
 }
