--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
         "async": "*",
         "connect-redis": "*",
         "express": "2.5.x",
+        "gss": "git://github.com/davidben/node-gss.git",
         "jade": "*",
         "markdown": "*",
         "moment": "*",
