FIX: Downgrade connect-redis version

--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
     "description": "cantas is a real-time collaborative application.",
     "dependencies": {
         "async": "*",
-        "connect-redis": "*",
+        "connect-redis": "1.4.x",
         "express": "2.5.x",
-        "express-session": "1.0.x",
         "jade": "*",
         "markdown": "*",
         "moment": "*",
