[REV] Update "My Cards" page to have a sidebar for filtering
 - Removed "Subscribed Cards" and "Assigned to me" tabs from dashboard
 - Added filters for created, subscribed and assigned cards
 - Search field to filter results by keyword
 - Ability to show archived cards
 - Due date filtering is still a WIP (cards currently cannot have a due date assigned to them)

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "socket.io": "*",
         "xmlrpc": "~1.1.0",
         "easyimage": "*",
-        "requestify": "*"
+        "requestify": "*",
+        "lodash": "*"
     },
     "devDependencies": {
         "expect.js": "*",
