--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "grunt": "~0.4.0",
         "grunt-contrib-concat": "*",
         "grunt-contrib-cssmin": "~0.6.1",
-        "grunt-contrib-jasmine": "*",
+        "grunt-contrib-jasmine": "0.5.x",
         "grunt-contrib-uglify": "*",
         "grunt-contrib-watch": "~0.4.3",
         "grunt-simple-mocha": "~0.4.0",
