--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
         "supertest": "*"
     },
     "engines": {
-        "node": "0.8.x",
-        "npm": "1.1.x"
+        "node": "0.10.26",
+        "npm": "1.4.7"
     },
     "name": "cantas",
     "private": true,
