Set main file in package.json (required by openshift)

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "lintcheck": "scripts/lintcheck",
         "start": "node app"
     },
+    "main": "app.js",
     "version": "1.0.0",
     "repository": {
         "type": "git",
