Re-added bugzilla feature settings.

--- a/settings.json.example
+++ b/settings.json.example
@@ -48,5 +48,11 @@
             "stage": "",
             "test": ""
         }
+    },
+     "bugzilla": {
+        "url": "https://bugzilla.redhat.com/jsonrpc.cgi",
+        "username": "",
+        "password": "",
+        "bugBaseUrl": "https://bugzilla.redhat.com/show_bug.cgi?id="
     }
 }
