--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "grunt": "~0.4.5",
         "grunt-contrib-concat": "*",
         "grunt-contrib-cssmin": "~0.6.1",
-        "grunt-contrib-jasmine": "~0.6.4",
+        "grunt-contrib-jasmine": "0.6.x",
         "grunt-contrib-uglify": "*",
         "grunt-contrib-watch": "~0.4.3",
         "grunt-simple-mocha": "~0.4.0",
