REV: let openshift use minified js by grunt
export NODE_ENV=production

--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -29,3 +29,10 @@ if [ -f "${OPENSHIFT_REPO_DIR}"/package.json ]; then
    echo
    (cd "${OPENSHIFT_REPO_DIR}"; export TMPDIR="/tmp"; npm install -d)
 fi
+
+#  Do grunt css and js minified.
+if [ -f "${OPENSHIFT_REPO_DIR}"/package.json ]; then
+   echo "  - Minified css js files ... "
+   echo
+   (cd "${OPENSHIFT_REPO_DIR}"; export TMPDIR="/tmp"; npm install -g grunt-cli; grunt)
+fi
