--- a/settings.json.example
+++ b/settings.json.example
@@ -10,15 +10,15 @@
         "strategy": "remote_user"
     },
     "links": {
-        "bugzilla": "https://bugzilla.redhat.com/enter_bug.cgi?product=Cantas",
+        "bugzilla": "",
         "hssPortal": ""
     },
     "mailServices": {
         "Zimbra": {
             "domains": [
-                "redhat.com"
+                "xxx.com"
             ],
-            "host": "mail.redhat.com",
+            "host": "mail.xxx.com",
             "port": 25,
             "secureConnection": true
         }
@@ -41,10 +41,10 @@
     "piwikSiteId": {
         "product": 1,
         "stage": 1,
-        "productUrl": "analytics.redhat.com/piwik/",
-        "stageUrl": "analytics-stage.redhat.com/piwik/"
+        "productUrl": "analytics.xxx.com/piwik/",
+        "stageUrl": "analytics-stage.xxx.com/piwik/"
     },
-    "realm": "REDHAT.COM",
+    "realm": "XXX.COM",
     "redis": {
         "host": "127.0.0.1",
         "port": 6379,
@@ -61,9 +61,9 @@
         }
     },
      "bugzilla": {
-        "url": "https://bugzilla.redhat.com/jsonrpc.cgi",
+        "url": "https://bugzilla.xxx.com/jsonrpc.cgi",
         "username": "",
         "password": "",
-        "bugBaseUrl": "https://bugzilla.redhat.com/show_bug.cgi?id="
+        "bugBaseUrl": "https://bugzilla.xxx.com/show_bug.cgi?id="
     }
 }
