--- a/settings.json.example
+++ b/settings.json.example
@@ -7,7 +7,12 @@
         "port": 3000
     },
     "auth": {
-        "strategy": "remote_user"
+        "strategy": "remote_user",
+        "google": {
+            "clientID": "",
+            "clientSecret": "",
+            "callbackURL": ""
+        }
     },
     "links": {
         "bugzilla": "",
