Fix errors when Google Oauth client ID is not provided

--- a/settings.json.example
+++ b/settings.json.example
@@ -10,8 +10,7 @@
         "strategy": "remote_user",
         "google": {
             "clientID": "",
-            "clientSecret": "",
-            "callbackURL": ""
+            "clientSecret": ""
         }
     },
     "links": {
