FIX: recover unit test for js
mocha spec/node/boardMove-test.js

--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
     "description": "cantas is a real-time collaborative application.",
     "dependencies": {
         "async": "*",
-        "connect-redis": "1.4.x",
-        "express": "2.5.x",
+        "connect-redis": "~1.4.x",
+        "express": "~2.5.x",
         "jade": "*",
         "markdown": "*",
         "moment": "*",
-        "mongoose": "*",
+        "mongoose": "3.6.13",
         "node-krb5": "*",
         "nodemailer": "~0.7.1",
         "passport": "*",
