FIX: node-easyimage upgrade behavior
node-easyimage use promise style. change callback to promise function

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "redis": "*",
         "socket.io": "~0.9.x",
         "xmlrpc": "~1.1.0",
-        "easyimage": "*",
+        "easyimage": "^1.0.2",
         "requestify": "*",
         "lodash": "*"
     },
