REV: add jslint to travis hook
every commit should be pass in jslint

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,4 @@ before_script:
   - "cp settings.json.example settings.json"
 script:
   - "DISPLAY=:99.0 grunt test"
+  - "/bin/bash ./scripts/lintcheck"
