FIX: add enable flag to piwik
piwik is analitics tools for web.
we add a customise flag User to count the unique visitor
clean settings json

--- a/settings.json.example
+++ b/settings.json.example
@@ -42,11 +42,10 @@
     "notification": {
         "subjectPrefix": "[Cantas] - "
     },
-    "piwikSiteId": {
-        "product": 1,
-        "stage": 1,
-        "productUrl": "analytics.xxx.com/piwik/",
-        "stageUrl": "analytics-stage.xxx.com/piwik/"
+    "piwik": {
+      "enable": false,
+      "siteId": 0,
+      "siteUrl": "analytics.xxx.com"
     },
     "realm": "XXX.COM",
     "redis": {
