--- a/settings.json.example
+++ b/settings.json.example
@@ -7,6 +7,7 @@
         "port": 3000
     },
     "auth": {
+        "default": "kerberos",
         "strategy": "remote_user",
         "google": {
             "clientID": "",
