--- a/settings.json.example
+++ b/settings.json.example
@@ -9,7 +9,7 @@
     "auth": {
         "default": "kerberos",
         "strategy": "remote_user",
-        "google": {
+        "google_oauth": {
             "clientID": "",
             "clientSecret": ""
         }
