refine names of authentication strategies
Renaming google to googleOAuth, and remote to remoteUser to make them more
clear and purposiveness.

--- a/settings.json.example
+++ b/settings.json.example
@@ -9,7 +9,7 @@
     "auth": {
         "default": "kerberos",
         "strategy": "remote_user",
-        "google": {
+        "googleOAuth": {
             "clientID": "",
             "clientSecret": ""
         }
