--- a/settings.json.example
+++ b/settings.json.example
@@ -14,6 +14,7 @@
             "clientSecret": ""
         }
     },
+    "trusted_domains": ["*"],
     "links": {
         "bugzilla": "",
         "hssPortal": ""
@@ -26,7 +27,8 @@
             "host": "mail.xxx.com",
             "port": 25,
             "secureConnection": true
-        }
+        },
+        "noreply_address": "noreply@example.com"
     },
     "management": {
         "service": {
